<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:src="@drawable/logochoose"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_time_effort_and_money_with_e7gzly"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/white_border"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/or"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorWhite" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:background="#fff"
                android:text="@string/login"
                android:textColor="#0099FE"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

