<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:cardBackgroundColor="#CC000000"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:hint="@string/current_password"
            android:theme="@style/TextInputLayout_login"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#fff">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/HintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:inputType="textPassword"
                app:hintTextAppearance="@style/HintText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:hint="@string/new_password"
            android:theme="@style/TextInputLayout_login"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:layout_constraintTop_toBottomOf="@+id/current_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#fff">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/HintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:inputType="textPassword"
                app:hintTextAppearance="@style/HintText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:hint="@string/confirm_password"
            android:theme="@style/TextInputLayout_login"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:layout_constraintTop_toBottomOf="@+id/new_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#fff">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/HintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:inputType="textPassword"
                app:hintTextAppearance="@style/HintText" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/confirm_new_password">


            <Button
                android:id="@+id/btn_cancel_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="serif"
                android:paddingBottom="10dp"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="#80FFFFFF" />

            <Button
                android:id="@+id/btn_save_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="serif"
                android:paddingBottom="10dp"
                android:text="@string/save"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>